--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: jack greenberg
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  software developer and aspiring writer
+  software developer, writer, and filmmaker
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jackg.dev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jck_mg
