--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,15 +5,19 @@ entries:
         url: https://github.com/grebneerg
       - title: linkedin
         url: https://www.linkedin.com/in/greenbergjack/
+      - title: youtube
+        url: https://www.youtube.com/@grebneerg
       - title: twitter
         url: https://twitter.com/jck_mg
   - title: things i do
     entries:
       - title: cs at cornell engineering
-      - title: backend developer and co-owner at <a href='https://www.outlandanalytics.com/''>outland analytics</a>
+        entries:
+          - title: with film and creative writing minors
   - title: things i have done
     entries:
-      - title: programming lead at <a href='http://www.team639.org/'>code red robotics</a>
-      - title: course instructor of <a href='https://www.cornellappdev.com/courses/backend'>the appdev backend course</a>
-      - title: backend subteam lead at <a href='https://www.cornellappdev.com/'>cornell appdev</a>
+      - title: "backend developer and co-owner at <a href='https://www.outlandanalytics.com/'>outland analytics</a>"
+      - title: "backend subteam lead at <a href='https://www.cornellappdev.com/'>cornell appdev</a>"
+      - title: "course instructor of <a href='https://www.cornellappdev.com/courses/backend'>the appdev backend course</a>"
+      - title: "programming lead at <a href='http://www.team639.org/'>code red robotics</a> (2018-2019)"
   - title: "this website theme based on <a href='https://github.com/riggraz/no-style-please'>no-style-please</a>"
