--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -19,5 +19,5 @@ entries:
       - title: "backend developer and co-owner at <a href='https://www.outlandanalytics.com/'>outland analytics</a>"
       - title: "backend subteam lead at <a href='https://www.cornellappdev.com/'>cornell appdev</a>"
       - title: "course instructor of <a href='https://www.cornellappdev.com/courses/backend'>the appdev backend course</a>"
-      - title: "programming lead at <a href='http://www.team639.org/'>code red robotics</a> (2018-2019)"
+      - title: "programming lead at <a href='http://www.team639.org/'>code red robotics</a>"
   - title: "this website theme based on <a href='https://github.com/riggraz/no-style-please'>no-style-please</a>"
