--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,6 +9,9 @@ entries:
         url: https://www.youtube.com/@grebneerg
       - title: twitter
         url: https://twitter.com/jck_mg
+  - title: check out my work
+    entries:
+      - title: "watch <a href='https://youtu.be/3sufoO1iILY'>The Drill</a>, my first complete short film, which I wrote, directed, and edited"
   - title: things i do
     entries:
       - title: cs at cornell engineering
